# personal-agent

./: .gitignore  CLAUDE.md  README.md  config.example.json  pyproject.toml
examples/: skill-coder.json
src/personal_agent/: __init__.py  __main__.py  config.py  cron_scheduler.py  display.py  exceptions.py  factory.py  project.py  selector.py  session.py  task_manager.py  types.py
src/personal_agent/agents/: __init__.py  debate.py  parallel_judge.py  pipeline.py  plan_execute.py  react.py  reflection.py
src/personal_agent/channels/: __init__.py  base.py  cli.py  feishu.py  websocket.py
src/personal_agent/cli/: __init__.py  __main__.py  app.py  callbacks.py  channel.py  commands.py  display.py  runner.py  theme.py
src/personal_agent/context/: __init__.py  budget.py  compressor.py  manager.py  strategies.py
src/personal_agent/core/: __init__.py  agent.py
src/personal_agent/memory/: __init__.py  agent_knowledge.py  base.py  consolidator.py  file_store.py  long_term.py  short_term.py  working.py
src/personal_agent/prompts/: __init__.py  base.py  registry.py
src/personal_agent/providers/: __init__.py  _errors.py  baidu.py  (+4 more)
tests/: conftest.py
tests/test_agent/: test_memory_integration.py  test_streaming.py
tests/test_memory/: test_consolidator.py  test_file_store.py  test_long_term.py
tests/test_tools/: test_ask_user.py  test_cron.py  test_executor.py  test_file_edit.py  test_glob.py  test_grep.py  test_lsp.py  test_mcp_resources.py  test_notebook_edit.py  test_plan_mode.py  test_sleep.py  test_task.py  test_todo.py  test_web_fetch.py  test_worktree.py
(+49 files in other folders)
