[project]
name = "personal-agent"
version = "0.1.0"
description = "A multi-pattern AI agent framework supporting ReAct, Plan-and-Execute, and Reflection"
requires-python = ">=3.11"
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "openai>=1.0",
    "anthropic>=0.39",
    "mcp>=1.0",
    "structlog>=24.0",
    "websockets>=13.0",
    "aiohttp>=3.9",
]

[project.scripts]
personal-agent = "personal_agent.__main__:main"
pa = "personal_agent.__main__:main"

[project.optional-dependencies]
memory-chroma = ["chromadb>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]